# Cliquemark

./: .gitignore  Cargo.toml  Config.toml  README.md  build_macOS_installer.sh
.github/workflows/: rust.yml
assets/: logo.icns
src/: main.rs
wix/: libs.wxs  main.wxs
