[package]
name = "Cliquemark"
version = "0.1.0"
edition = "2021"
description = "Application to watermark multiple images at the same time."
authors = ["Boris van Boxtel borisvanboxtel@protonmail.com"]

[dependencies]
adw = { version = "0.7.1", package = "libadwaita", features = ["v1_7"] }
gdk-pixbuf-sys = "0.20.7"
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_16"] }
rand = "0.9.0"
async-channel = "2.3.1"
rayon = "1.10.0"
image = "0.25.5"
imageproc = "0.25.0"
